mission forcefail, mission gamepush, other minor improvements and eslint warning fixes, mocha lib-server

--- a/src/client/agents/agentcard/agentcard.styl
+++ b/src/client/agents/agentcard/agentcard.styl
@@ -20,7 +20,6 @@
   position relative
   width 30px
   height 30px
-  border 1px solid green
   border-top-left-radius 2px
   border-bottom-left-radius 2px
   background-image url('../../../../assets/img/equipments/equipment_icon_256.png')
@@ -95,7 +94,6 @@
   left 30px
   width 55px
   height 30px
-  border 1px solid maroon
   font-size 10px
 
 /*Showcased Agent Card Layout*/
@@ -129,7 +127,6 @@
   left 80px
   width 168px
   height 180px
-  border 1px solid grey
 
 .showcased.agent-picture
   background-size 100%
@@ -155,7 +152,8 @@
   top 185px
   width 165px
   height 40px
-  border 1px solid red
+  text-align center
+  font-size 1.5em
 
 /*Agent Rankup*/
 .agent-rankup-button
