--- a/src/client/agents/agentinarmory.styl
+++ b/src/client/agents/agentinarmory.styl
@@ -1,12 +1,19 @@
 #AgentInArmory
   position absolute
   list-style none
-  padding 0
+  padding-top 8px
+  padding-left 8px
   top 185px
   left 462px
   width 425px
   height 265px
-  border 1px solid gold
+  border 1px solid black outset
+  background-image url('../../../assets/img/bg/metal_diamonds.jpg')
 
 #AgentInArmoryStatus
-  color gold
+  color black
+  font-weight bold
+  font-size 2.5em
+  position absolute
+  top 60px
+  left 25px
