--- a/src/client/dashboard/agentswindow/agenthire.form.styl
+++ b/src/client/dashboard/agentswindow/agenthire.form.styl
@@ -5,6 +5,8 @@
   padding 10px
   background darkslategrey
   border-radius 1em
+  background-image url('../../../../assets/img/bg/black_paper.jpg')
+  color white
 
   h3
     position absolute
@@ -22,7 +24,7 @@
     left 25px
     font-weight bold
     font-size 1.9em
-    color black
+    color white
 
 #HireAgentButton
   background-color black
@@ -67,7 +69,7 @@
     z-index 1000
 
     .Dropdown-option
-      background-color orange
+      background-color silver
       box-sizing border-box
       cursor pointer
       display block
@@ -112,7 +114,7 @@
     z-index 1000
 
     .Dropdown-option
-      background-color red
+      background-color silver
       box-sizing border-box
       cursor pointer
       display block
