--- a/src/client/dashboard/agentswindow/agentswindow.styl
+++ b/src/client/dashboard/agentswindow/agentswindow.styl
@@ -8,6 +8,8 @@
 
   #AgentsWindowMessage
     border 1px solid white
+    color white
+    font-weight bold
     position absolute
     top 185px
     text-align center
