--- a/src/client/dashboard/enhancementswindow/enhancement.card.styl
+++ b/src/client/dashboard/enhancementswindow/enhancement.card.styl
@@ -140,6 +140,9 @@
   opacity 0.5
   text-align center
   position absolute
+  background-image url('../../../../assets/img/bg/metal_reptile.jpg')
+  color white
+  font-weight bold
 
 .capability-enhancement-card
   position absolute
@@ -149,11 +152,11 @@
   height 360px
   margin 12px
   background-color whitesmoke
-  background-image url('../../../../assets/img/bg/red_velvet.jpg')
+  background-image url('../../../../assets/img/bg/rusty_panel.jpg')
   border-radius 1em
   color white
   font-weight bold
-  opacity 0.5
+  opacity 1
   text-align center
 
   div
@@ -177,7 +180,6 @@
   font-weight bold
   background-image url('../../../../assets/img/bg/black_marble.jpg')
   border-radius 1em
-  opacity 0.5
   text-align center
 
   div
