--- a/src/client/dashboard/missionswindow/missionaccept.form.styl
+++ b/src/client/dashboard/missionswindow/missionaccept.form.styl
@@ -6,6 +6,8 @@
   width 550px
   height 300px
   border-radius 1em
+  background-image url('../../../../assets/img/bg/black_paper.jpg')
+  color white
 
   h3
     position absolute
@@ -34,7 +36,7 @@
   bottom 20px
   font-weight bold
   font-size 1.5em
-  color black
+  color white
 
 #MissionAcceptButton
   position absolute
@@ -49,7 +51,6 @@
   position absolute
   font-size 1.7em
   font-weight bold
-  color black
   top 110px
   left 490px
 
@@ -88,7 +89,7 @@
     z-index 1000
 
     .Dropdown-option
-      background-color red
+      background-color silver
       box-sizing border-box
       cursor pointer
       display block
@@ -136,7 +137,7 @@
     z-index 1000
 
     .Dropdown-option
-      background-color orange
+      background-color silver
       box-sizing border-box
       cursor pointer
       display block
@@ -182,7 +183,7 @@
     z-index 1000
 
     .Dropdown-option
-      background-color red
+      background-color silver
       box-sizing border-box
       cursor pointer
       display block
