--- a/src/client/dashboard/missionswindow/missionswindow.styl
+++ b/src/client/dashboard/missionswindow/missionswindow.styl
@@ -8,12 +8,15 @@
 
 #MissionsWindowMessage
   position absolute
+  text-align center
   bottom 20px
   left 10px
   border 1px solid white
   border-radius 1em
   width 550px
   height 100px
+  color white
+  font-weight bold
 
 #MissionAcceptButtons
   position absolute
