--- a/src/client/mission/agentstier/buttons/actionchoose.styl
+++ b/src/client/mission/agentstier/buttons/actionchoose.styl
@@ -1,8 +1,7 @@
-.action-choose {
+.action-choose
   position absolute
   width 100px
   height 300px
   bottom 0px
   left 0px
   border 1px solid red
-}
