--- a/src/client/mission/results/window.styl
+++ b/src/client/mission/results/window.styl
@@ -12,3 +12,8 @@
     padding-left 20px
     font-weight bold
     font-size 1.2em
+
+    ul
+      padding-left 20px
+      font-weight bold
+      font-size 1.2em
