statistics window with localStorage logs - gameend, basic missions adjust,  new game end - discovered, fixes of previous features - forcefail prison, equipment use chance

--- a/src/client/dashboard/agentswindow/agenthire.form.styl
+++ b/src/client/dashboard/agentswindow/agenthire.form.styl
@@ -1,6 +1,6 @@
 #AgentHireForm
   height 170px
-  width 370px
+  width 300px
   margin 10px
   padding 10px
   background darkslategrey
@@ -30,9 +30,11 @@
   background-color black
   color silver
   position absolute
-  height 90px
-  width 90px
-  left 250px
+  font-size 1.4em
+  height 50px
+  width 130px
+  left 170px
+  top 115px
 
 .specialist-root
   background-color silver
