--- a/src/client/dashboard/playerswindow/playerswindow.styl
+++ b/src/client/dashboard/playerswindow/playerswindow.styl
@@ -10,7 +10,7 @@
   position absolute
   left 150px
   height 150px
-  width 900px
+  max-width 200px
 
 #PlayerLiquidResources
   position absolute
