--- a/src/client/mission/results/window.styl
+++ b/src/client/mission/results/window.styl
@@ -8,6 +8,16 @@
   background-color silver
   z-index 1001
 
+  ul
+    padding-left 20px
+    font-weight bold
+    font-size 1.2em
+
+    li
+      padding-left 30px
+      font-weight bold
+      font-size 1.1em
+
   p
     padding-left 20px
     font-weight bold
@@ -17,3 +27,8 @@
       padding-left 20px
       font-weight bold
       font-size 1.2em
+
+      li
+        padding-left 30px
+        font-weight bold
+        font-size 1.1em
