--- a/src/client/mission/tabletoptier/tabletop/probabilitybar.styl
+++ b/src/client/mission/tabletoptier/tabletop/probabilitybar.styl
@@ -1,8 +1,10 @@
-.probability-bar {
+.probability-bar
   position absolute
   bottom 1px
   left 1px
   width 160px
   height 100px
   border 5px solid red
-}
+  color red
+  font-size 2.5em
+  padding 10px
