validation of organization, POC of jquery integration, graphical candy for dashboard, obscuritycheck for missions below 0 - troublesome

--- a/src/client/briefing/missionlist.table.styl
+++ b/src/client/briefing/missionlist.table.styl
@@ -13,3 +13,12 @@
       height 39px
       background-color darkred
       color white
+
+    tr.selected
+      background-color darkslategrey
+
+    td
+      color gold
+
+      button
+        background-color black
