--- a/src/client/dashboard/agentswindow/agents.list.record.styl
+++ b/src/client/dashboard/agentswindow/agents.list.record.styl
@@ -13,6 +13,21 @@
   font-weight bold
   color gold
 
+.agent-list-record.operative.on-display
+  background-color darkslategrey
+  color red
+  font-weight bold
+
+.agent-list-record.technician.on-display
+  background-color darkslategrey
+  color green
+  font-weight bold
+
+.agent-list-record.spy.on-display
+  background-color darkslategrey
+  font-weight bold
+  color gold
+
 .agent-save-button
   color black
 
