--- a/src/client/dashboard/countrieswindow/countrystatswindow.styl
+++ b/src/client/dashboard/countrieswindow/countrystatswindow.styl
@@ -2,10 +2,11 @@
   position absolute
   top 150px
   left 1000px
-  height 250px
+  height 290px
   width 339px
   border 1px solid black
   background-image url('../../../../assets/img/bg/smooth_metal.jpg')
+  padding-top 3px
 
   table
     height 250px
@@ -17,9 +18,9 @@
 
   th
     height 39px
-    background-image url('../../../../assets/img/bg/smooth_metal.jpg')
-    color blue
+    background-color darkred
+    color gold
 
   td
-    height 34px
+    height 38px
     font-weight bold
