--- a/src/client/dashboard/agentswindow/agentswindow.styl
+++ b/src/client/dashboard/agentswindow/agentswindow.styl
@@ -1,7 +1,7 @@
 #AgentsWindow
   position absolute
   top 150px
-  height 250px
+  height 290px
   width 999px
   border 1px solid black
   background-image url('../../../../assets/img/bg/smooth_metal.jpg')
@@ -20,22 +20,23 @@
 
   #AgentsList
     position absolute
-    border 1px solid white
-    border-radius 0.5em
     width 680px
-    height 245px
-    top 5x
     left 315px
 
     table
-      border 1px solid black
-      margin 3px
+      border 1px solid white
 
       tr
-        border 1px solid black
+        border 1px solid white
+        font-size 1em
 
         td
           padding 3px
+
+          button
+            font-size 0.8em
+            padding 0 0.8em
+            max-height 24px
 
 .no-agent-for-hire
   position relative
