--- a/src/client/dashboard/missionswindow/missionswindow.styl
+++ b/src/client/dashboard/missionswindow/missionswindow.styl
@@ -1,7 +1,7 @@
 #MissionsWindow
   position absolute
-  top 400px
-  height 460px
+  top 440px
+  height 420px
   width 1340px
   border 1px solid maroon
   background-image url('../../../../assets/img/bg/smooth_metal.jpg')
@@ -9,12 +9,12 @@
 #MissionsWindowMessage
   position absolute
   text-align center
-  bottom 20px
+  bottom 15px
   left 10px
   border 1px solid white
   border-radius 1em
   width 550px
-  height 100px
+  height 80px
   color white
   font-weight bold
 
@@ -29,5 +29,6 @@
 
 #PrisonBreakMission
   position absolute
-  top 5px
+  bottom 5px
   right 10px
+  font-weight bold
