added google analytics, fixed determine focus for minus sign

--- a/src/client/dashboard/playerswindow/playerswindow.styl
+++ b/src/client/dashboard/playerswindow/playerswindow.styl
@@ -4,7 +4,7 @@
   width 1340px
   background-image url('../../../../assets/img/bg/smooth_metal.jpg')
   font-weight bold
-  color blue
+  color black
 
 #PlayerLabel
   position absolute
