fixed dashboard message, titles of screens, removed 4 missions and enhancements due to not actually inteded for full implementation

--- a/src/client/agents/agentinarmory.styl
+++ b/src/client/agents/agentinarmory.styl
@@ -8,7 +8,8 @@
   width 425px
   height 265px
   border 1px solid black outset
-  background-image url('../../../assets/img/bg/metal_diamonds.jpg')
+  /*background-image url('../../../assets/img/bg/metal_diamonds.jpg')*/
+  background-color silver
 
 #AgentInArmoryStatus
   color black
