--- a/src/client/agents/armoryscreen.styl
+++ b/src/client/agents/armoryscreen.styl
@@ -5,3 +5,17 @@
   width 1640px
   height 860px
   border 1px black solid
+
+#ArmoryScreenLabel
+  position absolute
+  width 200px
+  height 50px
+  left 720px
+  top -25px
+  background-color grey
+  border 5px solid black
+  border-radius 1em
+  text-align center
+  font-weight bold
+  font-size 1.5em
+  z-index 1001
