--- a/src/client/dashboard/agentswindow/agenthire.form.styl
+++ b/src/client/dashboard/agentswindow/agenthire.form.styl
@@ -79,7 +79,7 @@
       padding 1px
       padding-right 5px
       width 100px
-      z-index 1000px
+      z-index 1000
 
 .rank-root
   background-color silver
@@ -124,4 +124,4 @@
       padding 1px
       padding-right 5px
       width 100px
-      z-index 1000px
+      z-index 1000
