--- a/src/client/dashboard/enhancementswindow/enhancement.card.styl
+++ b/src/client/dashboard/enhancementswindow/enhancement.card.styl
@@ -13,7 +13,6 @@
 
   div
     display block
-    margin 3px
 
 #Youcan\'tseeme
   bottom 5px
@@ -42,13 +41,13 @@
 #PuppeteeringFBI
   left 1118px
   bottom 5px
+  font-size 0.9em
 
   div
     display block
-    margin 3px
 
 #Repayingthefavors
-  right 6px
+  left 6px
   top 60px
 
   div
@@ -56,7 +55,7 @@
     margin 3px
 
 #WeGotthePower
-  right 228px
+  left 228px
   top 60px
 
   div
@@ -64,7 +63,7 @@
     margin 3px
 
 #SideQuest
-  right 450px
+  left 450px
   top 60px
 
   div
@@ -72,7 +71,7 @@
     margin 3px
 
 #AugeanStables
-  right 672px
+  left 672px
   top 60px
 
   div
@@ -80,7 +79,7 @@
     margin 3px
 
 #Nostalgia
-  right 894px
+  left 894px
   top 60px
 
   div
@@ -88,7 +87,7 @@
     margin 3px
 
 #DeputyofLaw
-  right 1118px
+  left 1118px
   top 60px
 
   div
@@ -97,39 +96,39 @@
 
 #CleaningService
   top 440px
-  right 5px
+  left 5px
 
 #ArmyLevelCrypto
   top 310px
-  right 5px
+  left 5px
 
 #StorkInd\.
   top 185px
-  right 5px
+  left 5px
 
 #ArmsDealer
   top 185px
-  right 890px
+  left 890px
 
 #Laboratory
   top 310px
-  right 890px
+  left 890px
 
 #Pharmacy
   top 440px
-  right 890px
+  left 890px
 
 #Forger
   top 440px
-  right 1113px
+  left 1113px
 
 #Workshop
   top 310px
-  right 1113px
+  left 1113px
 
 #Locals
   top 185px
-  right 1113px
+  left 1113px
 
 .enhancement-card
   width 216px
@@ -147,7 +146,7 @@
 .capability-enhancement-card
   position absolute
   top 190px
-  right 232px
+  left 232px
   width 305px
   height 360px
   margin 12px
@@ -172,7 +171,7 @@
 .leadership-enhancement-card
   position absolute
   top 190px
-  right 558px
+  left 558px
   width 305px
   height 360px
   margin 12px
