--- a/src/client/dashboard/missionswindow/missionaccept.form.styl
+++ b/src/client/dashboard/missionswindow/missionaccept.form.styl
@@ -97,7 +97,7 @@
       padding 1px
       padding-right 5px
       width 100px
-      z-index 1000px
+      z-index 1000
 
 .focus-root
   background-color silver
@@ -145,7 +145,7 @@
       padding 1px
       padding-right 5px
       width 200px
-      z-index 1000px
+      z-index 1000
 
 .country-root
   background-color silver
@@ -191,4 +191,4 @@
       padding 1px
       padding-right 5px
       width 160px
-      z-index 1000px
+      z-index 1000
