--- a/src/client/dashboard/statuseswindow/statuses.window.styl
+++ b/src/client/dashboard/statuseswindow/statuses.window.styl
@@ -27,6 +27,20 @@
   button
     color black
 
+#StatusesWindowLabel
+  position absolute
+  width 200px
+  height 50px
+  left 570px
+  top -25px
+  background-color sandybrown
+  border 5px solid black
+  border-radius 1em
+  text-align center
+  font-weight bold
+  font-size 1.5em
+  z-index 1001
+
 .status-card.yacht
   background-image url('../../../../assets/img/statuses/yacht.jpg')
   background-size 100% 100%
