--- a/src/client/briefing/briefingscreen.styl
+++ b/src/client/briefing/briefingscreen.styl
@@ -34,3 +34,17 @@
   width 450px
   height 140px
   color white
+
+#BriefingScreenLabel
+  position absolute
+  width 200px
+  height 50px
+  left 720px
+  top -25px
+  background-color grey
+  border 5px solid black
+  border-radius 1em
+  text-align center
+  font-weight bold
+  font-size 1.5em
+  z-index 1001
