--- a/src/client/command/command.styl
+++ b/src/client/command/command.styl
@@ -7,6 +7,20 @@
   left 50%
   position absolute
 
+#CommandCenterScreenLabel
+  position absolute
+  width 400px
+  height 50px
+  left 620px
+  top -25px
+  background-color grey
+  border 5px solid black
+  border-radius 1em
+  text-align center
+  font-weight bold
+  font-size 1.5em
+  z-index 1001
+
 .game-title
   position absolute
   z-index 1
