--- a/src/client/dashboard/enhancementswindow/enhancements.window.styl
+++ b/src/client/dashboard/enhancementswindow/enhancements.window.styl
@@ -1,8 +1,20 @@
-#EnhancementWindow
+#EnhancementsWindow
   position absolute
-  overflow-y hidden
-  overflow-x hidden
   background-image url('../../../../assets/img/bg/wall_metal.jpg')
   width 1340px
   height 700px
   top 160px
+
+#EnhancementsWindowLabel
+  position absolute
+  width 200px
+  height 50px
+  left 570px
+  top -25px
+  background-color silver
+  border 5px solid black
+  border-radius 1em
+  text-align center
+  font-weight bold
+  font-size 1.5em
+  z-index 1001
