--- a/src/client/introduction/intro.screen.styl
+++ b/src/client/introduction/intro.screen.styl
@@ -7,6 +7,20 @@
   border 1px solid silver
   border-radius 1em
 
+#IntroScreenLabel
+  position absolute
+  width 400px
+  height 50px
+  left 470px
+  top -25px
+  background-color grey
+  border 5px solid black
+  border-radius 1em
+  text-align center
+  font-weight bold
+  font-size 1.5em
+  z-index 1001
+
 #IntroScreen
   position absolute
   left 200px
