--- a/src/client/mission/missionscreen.styl
+++ b/src/client/mission/missionscreen.styl
@@ -7,6 +7,20 @@
   margin-left -820px
   border 1px solid black
 
+#MissionScreenLabel
+  position absolute
+  width 200px
+  height 50px
+  left 720px
+  top -25px
+  background-color grey
+  border 5px solid black
+  border-radius 1em
+  text-align center
+  font-weight bold
+  font-size 1.5em
+  z-index 1001
+
 *,
 *::before,
 *::after
