--- a/src/client/dashboard/welcome.window.styl
+++ b/src/client/dashboard/welcome.window.styl
@@ -7,6 +7,7 @@
   left -430px
   margin-left 50%
   text-align center
+  font-weight bold
   padding-left 35px
   padding-right 35px
   z-index 1001
