--- a/src/client/auth/login.message.styl
+++ b/src/client/auth/login.message.styl
@@ -1,12 +1,14 @@
 #LoginMessage
   position absolute
-  top 140px
+  top 100px
   left 580px
-  height 150px
+  min-height 150px
   width 440px
   border 1px solid silver
   border-radius 1em
   display flex
   text-align center
+  font-weight bold
+  font-size 1.2em
   padding 5px
   color silver
