3 slot game storage, save/load game message, player as agent, player start window

--- a/src/client/dashboard/optionswindow/debug.window.styl
+++ b/src/client/dashboard/optionswindow/debug.window.styl
@@ -15,6 +15,10 @@
     fieldset
       position absolute
 
+    legend
+      font-size 1.4em
+      font-weight bold
+
 #SanitizeStateButton
   width 230px
   height 45px
