--- a/src/client/dashboard/optionswindow/options.game.window.styl
+++ b/src/client/dashboard/optionswindow/options.game.window.styl
@@ -7,6 +7,34 @@
   border 1px solid white
   background-image url('../../../../assets/img/bg/smooth_metal.jpg')
 
+  legend
+    font-size 1.4em
+    font-weight bold
+
   button
     background-color red
     color black
+
+#SaveGameMessage
+  position absolute
+  width 400px
+  height 150px
+  top 320px
+  left 620px
+  font-size 1.2em
+  font-weight bold
+  background-color darkgrey
+  border 5px solid black
+  border-radius 1em
+
+#LoadGameMessage
+  position absolute
+  width 400px
+  height 150px
+  top 320px
+  left 620px
+  font-size 1.2em
+  font-weight bold
+  background-color ghostwhite
+  border 5px solid black
+  border-radius 1em
