--- a/src/client/dashboard/optionswindow/options.window.styl
+++ b/src/client/dashboard/optionswindow/options.window.styl
@@ -7,12 +7,13 @@
 
   .options-form
     position absolute
-    top 80px
-    left 80px
+    height 400px
+    width 600px
 
     fieldset
       position absolute
-      width 800px
+      width 600px
+      height 390px
 
       legend
         font-weight bold
@@ -28,3 +29,18 @@
 
   button
     margin 25px
+
+#PayingWindow
+  position absolute
+  left 1010px
+  top 10px
+  height 380px
+  width 300px
+  font-weight bold
+
+  legend
+    font-size 1.4em
+
+  label
+    font-size 1.2em
+    margin-top 10px
