--- a/src/client/dashboard/playerswindow/players.window.styl
+++ b/src/client/dashboard/playerswindow/players.window.styl
@@ -8,18 +8,19 @@
 
 #PlayerLabel
   position absolute
-  left 150px
+  left 250px
   height 150px
   max-width 200px
 
 #PlayerLiquidResources
   position absolute
-  left 350px
+  top 80px
+  left 300px
   height 150px
   width 287px
 
   span
-    font-size 1.4em
+    font-size 1.2em
 
 #PlayerName
   position absolute
@@ -28,6 +29,7 @@
   font-size 2em
   min-width 200px
 
+/*
 #PlayerPicture
   position absolute
   height 150px
@@ -35,6 +37,16 @@
   background-image url('../../../../assets/img/avatars/silhouette_man_256.png')
   background-size 100% 100%
   background-repeat no-repeat
+*/
+
+#PlayerAgentActionableButton
+  position absolute
+  top 50px
+  left 300px
+  color gold
+  background-color black
+  font-size 1.1em
+  text-shadow 2px 2px 8px gold
 
 button.buy10Contacts
   position absolute
