tutorial `h` screen helps, campaign intro screens, briefing screen arrows

--- a/src/client/briefing/briefingscreen.styl
+++ b/src/client/briefing/briefingscreen.styl
@@ -48,3 +48,16 @@
   font-weight bold
   font-size 1.5em
   z-index 1001
+
+#BriefingTutorial
+  position absolute
+  text-align center
+  font-size 1.2em
+  font-weight bold
+  top 100px
+  left 400px
+  width 840px
+  height 600px
+  background-color honeydew
+  border 5px solid black
+  z-index 1011
