--- a/src/client/command/command.styl
+++ b/src/client/command/command.styl
@@ -45,3 +45,16 @@
   top 800px
   left 410px
   color white
+
+#CommandTutorial
+  position absolute
+  text-align center
+  font-size 1.2em
+  font-weight bold
+  top 100px
+  left 400px
+  width 840px
+  height 600px
+  background-color honeydew
+  border 5px solid black
+  z-index 1011
