--- a/src/client/agents/armoryscreen.styl
+++ b/src/client/agents/armoryscreen.styl
@@ -19,3 +19,16 @@
   font-weight bold
   font-size 1.5em
   z-index 1001
+
+#ArmoryTutorial
+  position absolute
+  text-align center
+  font-size 1.2em
+  font-weight bold
+  top 100px
+  left 400px
+  width 840px
+  height 600px
+  background-color honeydew
+  border 5px solid black
+  z-index 1011
