--- a/src/client/dashboard/playerswindow/players.window.styl
+++ b/src/client/dashboard/playerswindow/players.window.styl
@@ -64,3 +64,16 @@ button.buy10Contacts
   top 45px
   right 5px
   font-size 1.25em
+
+#DashboardTutorial
+  position absolute
+  text-align center
+  font-size 1.2em
+  font-weight bold
+  top 100px
+  left 400px
+  width 840px
+  height 600px
+  background-color honeydew
+  border 5px solid black
+  z-index 1011
