--- a/src/client/mission/missionscreen.styl
+++ b/src/client/mission/missionscreen.styl
@@ -25,3 +25,16 @@
 *::before,
 *::after
   box-sizing border-box
+
+#MissionTutorial
+  position absolute
+  text-align center
+  font-size 1.2em
+  font-weight bold
+  top 100px
+  left 400px
+  width 840px
+  height 600px
+  background-color honeydew
+  border 5px solid black
+  z-index 1011
