agent hiring through missions, protective gear implemented, 3rd tier toys enh buy only for paying

--- a/src/client/mission/tabletoptier/dice/dice.styl
+++ b/src/client/mission/tabletoptier/dice/dice.styl
@@ -3,7 +3,11 @@
   height 85px
   margin 3px
   border 2px solid black
+  margin 10px
 }
+
+.dice.rollable
+  box-shadow 1px 1px 2px black, 0 0 25px yellow, 0 0 5px red
 
 .dice.operations {
   background-color red
