--- a/src/client/mission/tabletoptier/tabletop/tabletop.styl
+++ b/src/client/mission/tabletoptier/tabletop/tabletop.styl
@@ -14,6 +14,13 @@
   opacity 0.7
   color gold
 
+#ProtectiveGearButton
+  position absolute
+  bottom 80px
+  right 3px
+  background-color blue
+  color black
+
 .taskcomplete-button
   position absolute
   width 180px
