--- a/src/client/dashboard/dashboard.screen.styl
+++ b/src/client/dashboard/dashboard.screen.styl
@@ -48,3 +48,10 @@
   font-weight bold
   font-size 1.5em
   z-index 1001
+
+#ToPayments
+  position absolute
+  width 75px
+  height 35px
+  right 10px
+  bottom 100px
