--- a/src/client/dashboard/playerswindow/players.window.styl
+++ b/src/client/dashboard/playerswindow/players.window.styl
@@ -29,6 +29,11 @@
   font-size 2em
   min-width 200px
 
+#PlayerHelpHint
+  position absolute
+  bottom 5px
+  right 5px
+
 /*
 #PlayerPicture
   position absolute
