--- a/src/client/mission/tabletoptier/tabletop/buttons/actionbutton.styl
+++ b/src/client/mission/tabletoptier/tabletop/buttons/actionbutton.styl
@@ -1,8 +1,19 @@
-.action-button {
+.action-button
   position absolute
   width 180px
   height 100px
   border 5px solid darkred
   bottom 1px
   right 1px
-}
+
+#MissionStartMessage
+  position absolute
+  font-size 2.2em
+  color yellow
+  font-weight bold
+  width 510px
+  height 80px
+  top 220px
+  left 20px
+  text-align center
+  z-index 1001
