--- a/src/client/dashboard/welcome.window.styl
+++ b/src/client/dashboard/welcome.window.styl
@@ -34,3 +34,11 @@
   margin-left 50%
   bottom 20px
   border 3px solid black
+
+#LoginDevNoticeButton
+  position absolute
+  right 10px
+  bottom 20px
+  background-color grey
+  font-size 1.8em
+  border 3px solid black
