playability improvements - mission talk, statuses, etc.

--- a/src/client/agents/agentequipcontent.styl
+++ b/src/client/agents/agentequipcontent.styl
@@ -13,7 +13,7 @@
     font-size 1.4em
     color silver
 
-  #ArmoryMessage
+  #ArmoryLogMessage
     position absolute
     right 90px
     top 200px
