--- a/src/client/briefing/briefing.screen.styl
+++ b/src/client/briefing/briefing.screen.styl
@@ -26,7 +26,8 @@
   border-right 60px solid darkred
   border-bottom 30px solid transparent
 
-#BriefingMessage
+/*
+#BriefingLogMessage
   position absolute
   border 1px solid white
   left 1150px
@@ -34,6 +35,7 @@
   width 450px
   height 140px
   color white
+*/
 
 #BriefingScreenLabel
   position absolute
@@ -61,3 +63,14 @@
   background-color honeydew
   border 5px solid black
   z-index 1011
+
+#BriefingMessage
+  position absolute
+  font-size 2.2em
+  font-weight bold
+  color gold
+  text-align center
+  width 1040px
+  top 320px
+  left 300px
+  z-index 10
