--- a/src/client/agents/armory.screen.styl
+++ b/src/client/agents/armory.screen.styl
@@ -32,3 +32,14 @@
   background-color honeydew
   border 5px solid black
   z-index 1011
+
+#ArmoryMessage
+  position absolute
+  font-size 2.2em
+  font-weight bold
+  color ghostwhite
+  text-align center
+  width 1040px
+  top 220px
+  left 300px
+  z-index 10
