--- a/src/client/dashboard/agentswindow/agents.window.styl
+++ b/src/client/dashboard/agentswindow/agents.window.styl
@@ -11,17 +11,18 @@
     color white
     font-weight bold
     position absolute
-    top 185px
+    top 205px
     text-align center
     width 295px
     height 55px
-    left 15px
+    left 545px
     border-radius 0.5em
 
   #AgentsList
     position absolute
+    top 5px
     width 680px
-    left 315px
+    left 15px
 
     table
       border 1px solid white
@@ -50,3 +51,23 @@
   justify-content center
   opacity 0.7
   z-index 1
+
+#AgentShiftLeft
+  position absolute
+  right 430px
+  top 50px
+  width 0
+  height 0
+  border-top 30px solid transparent
+  border-right 45px solid black
+  border-bottom 30px solid transparent
+
+#AgentShiftRight
+  position absolute
+  right 100px
+  top 50px
+  width 0
+  height 0
+  border-top 30px solid transparent
+  border-left 45px solid black
+  border-bottom 30px solid transparent
