smoothing out gameplay

--- a/src/client/dashboard/missionswindow/missions.window.styl
+++ b/src/client/dashboard/missionswindow/missions.window.styl
@@ -32,3 +32,13 @@
   bottom 5px
   right 10px
   font-weight bold
+
+#RecruitAgentButton
+  position absolute
+  top 20px
+  right 10px
+
+#RobBankButton
+  position absolute
+  top 70px
+  right 10px
