--- a/src/client/agents/agentequipcontent.styl
+++ b/src/client/agents/agentequipcontent.styl
@@ -48,3 +48,9 @@
     width 150px
     height 45px
     background-color black
+
+  #AgentInArmoryToMission
+    position absolute
+    top 320px
+    left 840px
+    z-index 1001
