--- a/src/client/briefing/briefing.screen.styl
+++ b/src/client/briefing/briefing.screen.styl
@@ -64,6 +64,7 @@
   border 5px solid black
   z-index 1011
 
+/* for $ */
 #BriefingMessage
   position absolute
   font-size 2.2em
@@ -74,3 +75,13 @@
   top 320px
   left 300px
   z-index 10
+
+#BriefingLiquidResources
+  position absolute
+  width 150px
+  height 100px
+  top 20px
+  right 100px
+
+  span
+    color ghostwhite
