--- a/src/client/dashboard/statuseswindow/statuses.window.styl
+++ b/src/client/dashboard/statuseswindow/statuses.window.styl
@@ -8,3 +8,15 @@
   top 160px
   height 700px
   background-image url('../../../../assets/img/bg/sandstone.jpg')
+
+#StatusesTierComplete
+  position absolute
+  top 20px
+  left 295px
+  width 750px
+  height 500px
+  border 5px solid black
+  border-radius 1em
+  background-color sandybrown
+  font-size 1.2em
+  text-align center
