--- a/src/client/mission/missioncard/tasks/task.styl
+++ b/src/client/mission/missioncard/tasks/task.styl
@@ -1,9 +1,11 @@
 .task.on-mission
+  position relative
   display inline-block
-  width 330px
+  left -40px
+  width 380px
   height 105px
-  margin-top 50px
-  margin-left 40px
+  margin-top 30px
+  margin-left 10px
 
 .task.briefing
   width 170px
