--- a/src/client/mission/results/window.styl
+++ b/src/client/mission/results/window.styl
@@ -6,6 +6,8 @@
   height 860px
   border 1px solid black
   background-color silver
+  border 5px solid black
+  border-radius 1em
   z-index 1001
 
   ul
