enhancements upgrade dialogs, agent talk when tired

--- a/src/client/agents/agentinarmory.styl
+++ b/src/client/agents/agentinarmory.styl
@@ -18,3 +18,22 @@
   position absolute
   top 60px
   left 25px
+
+
+#BackFromArmory
+  position absolute
+  top 380px
+  left 840px
+  z-index 1001
+
+#UnequipAll
+  position absolute
+  top 430px
+  left 840px
+  z-index 1001
+
+#AgentInArmoryToMission
+  position absolute
+  top 320px
+  left 840px
+  z-index 1001
