--- a/src/client/dashboard/missionswindow/missions.window.styl
+++ b/src/client/dashboard/missionswindow/missions.window.styl
@@ -42,3 +42,23 @@
   position absolute
   top 70px
   right 10px
+
+#OldDebtButton
+  position absolute
+  top 120px
+  right 10px
+
+#PurgeEvidenceButton
+  position absolute
+  top 170px
+  right 10px
+
+#SilenceRatButton
+  position absolute
+  top 220px
+  right 10px
+
+#InnerCircleButton
+  position absolute
+  top 270px
+  right 10px
