--- a/src/client/agents/armory.screen.styl
+++ b/src/client/agents/armory.screen.styl
@@ -43,3 +43,21 @@
   top 220px
   left 300px
   z-index 10
+
+#AgentTalk
+  position absolute
+  top 20px
+  left 295px
+  width 750px
+  height 500px
+  border 5px solid black
+  border-radius 1em
+  background-color ghostwhite
+  font-size 1.2em
+  text-align center
+  z-index 1011
+
+  button
+    position absolute
+    bottom 10px
+    left 310px
