--- a/src/client/dashboard/dashboard.screen.styl
+++ b/src/client/dashboard/dashboard.screen.styl
@@ -21,6 +21,17 @@
   height 50px
   font-size 1.4em
 
+#DashboardMessage
+  position absolute
+  font-size 2.2em
+  font-weight bold
+  color gold
+  text-align center
+  width 1040px
+  top 320px
+  left 300px
+  z-index 101
+
 .hide-show-button
   position absolute
   left 550px
