playtested, reputation losses on pass mission

--- a/src/client/agents/agenttalk/enhancement.talk.styl
+++ b/src/client/agents/agenttalk/enhancement.talk.styl
@@ -1,8 +1,9 @@
 #EnhancementTalk
   position absolute
-  left 200px
-  width 300px
-  height 300px
+  left 350px
+  width 350px
+  height 270px
+  padding 10px
   background-color grey
   border 5px black solid
   border-radius 1em
@@ -31,6 +32,12 @@
 
 #EnhancementTalkAcknowledgement
   position absolute
+  font-size 1.5em
+  font-weight bold
 
 #EnhancementTalkAcknowledgementButton
   position absolute
+  font-size 1.5em
+  font-weight bold
+  bottom 10px
+  left 130px
