--- a/src/client/agents/armory.screen.styl
+++ b/src/client/agents/armory.screen.styl
@@ -37,7 +37,7 @@
   position absolute
   font-size 2.2em
   font-weight bold
-  color ghostwhite
+  color gold
   text-align center
   width 1040px
   top 220px
