--- a/src/client/agents/agentinarmory.styl
+++ b/src/client/agents/agentinarmory.styl
@@ -1,5 +1,6 @@
 #AgentInArmory
   position absolute
+  opacity 0.5
   list-style none
   padding-top 8px
   padding-left 8px
@@ -11,8 +12,12 @@
   /*background-image url('../../../assets/img/bg/metal_diamonds.jpg')*/
   background-color silver
 
+  .agent-card
+    opacity 1
+
 #AgentInArmoryStatus
   color black
+  opacity 0.5
   font-weight bold
   font-size 2.5em
   position absolute
