--- a/src/client/agents/facility.upgrade.dialog.styl
+++ b/src/client/agents/facility.upgrade.dialog.styl
@@ -1,8 +1,10 @@
 #FacilityUpgradeDialog
   position absolute
-  width 220px
-  height 200px
+  width 270px
+  height 240px
   left 210px
+  font-size 1.3em
+  font-weight bold
   text-align center
   background-color grey
   border 5px solid black
