--- a/src/client/dashboard/playerswindow/training.upgrade.dialog.styl
+++ b/src/client/dashboard/playerswindow/training.upgrade.dialog.styl
@@ -1,11 +1,24 @@
 #TrainingUpgradeDialog
   position absolute
-  width 440px
-  height 150px
+  width 390px
+  height 220px
   right 390px
   top 30px
+  padding-top 15px
+  font-size 1.3em
+  font-weight bold
   text-align center
   background-color grey
   border 5px solid black
   border-radius 1em
   z-index 11
+
+#TrainingUpgradeYes
+  position absolute
+  bottom 10px
+  left 50px
+
+#TrainingUpgradeNo
+  position absolute
+  bottom 10px
+  right 50px
