--- a/src/client/dashboard/agentswindow/agentondisplay.styl
+++ b/src/client/dashboard/agentswindow/agentondisplay.styl
@@ -1,7 +1,27 @@
 #AgentOnDisplay
   position absolute
-  right 160px
+  right 55px
   top 10px
-  height 144px
-  width 260px
+  width 425px
+  height 265px
   border 1px solid black
+
+#AgentShiftLeft
+  position absolute
+  right 490px
+  top 50px
+  width 0
+  height 0
+  border-top 90px solid transparent
+  border-right 30px solid black
+  border-bottom 90px solid transparent
+
+#AgentShiftRight
+  position absolute
+  right 10px
+  top 50px
+  width 0
+  height 0
+  border-top 90px solid transparent
+  border-left 30px solid black
+  border-bottom 90px solid transparent
