--- a/src/client/dashboard/playerswindow/players.window.styl
+++ b/src/client/dashboard/playerswindow/players.window.styl
@@ -6,21 +6,25 @@
   font-weight bold
   color black
 
-#PlayerLabel
+#PlayerAgentCard
   position absolute
   left 250px
+
+#PlayerLabel
+  position absolute
+  left 0px
   height 150px
   max-width 200px
 
 #PlayerLiquidResources
   position absolute
   top 80px
-  left 300px
+  right -100px
   height 150px
   width 287px
 
   span
-    font-size 1.2em
+    font-size 1.1em
 
 #PlayerName
   position absolute
@@ -32,7 +36,7 @@
 #PlayerHelpHint
   position absolute
   bottom 5px
-  right 5px
+  left 5px
   text-align right
 
 /*
@@ -48,7 +52,7 @@
 #PlayerAgentActionableButton
   position absolute
   top 50px
-  left 300px
+  left 5px
   color gold
   background-color black
   font-size 1.1em
