--- a/src/client/briefing/activemission/mission.thumbnail.styl
+++ b/src/client/briefing/activemission/mission.thumbnail.styl
@@ -6,9 +6,13 @@
 #MissionDescription
   position absolute
   width 550px
-  height 50px
+  height 100px
   background-color grey
   font-weight bold
+  font-size 1.2em
+  padding-left 10px
+  padding-right 8px
+  padding-top 11px
   bottom 0px
   left 0px
   text-align center
