--- a/src/client/equipments/equipment.styl
+++ b/src/client/equipments/equipment.styl
@@ -4,8 +4,19 @@
   top 480px
   width 270px
   height 320px
-  border 1px solid silver
   color silver
+
+.equipment-count
+  position absolute
+  padding-left 5px
+  width 20px
+  height 30px
+  background-color black
+  left 50px
+  top 50px
+  color white
+  font-weight bold
+  font-size 1.2em
 
 .equipment-stock.operations
   left 140px
@@ -34,6 +45,7 @@
 .equipment-buy-btn
   display inline-block
   position absolute
+  left 0px
   width 40px
   height 30px
   padding 2px
@@ -44,6 +56,7 @@
 .equipment-sell-btn
   display inline-block
   position absolute
+  left 0px
   top 50px
   width 40px
   height 30px
