added few sounds, small fixes of state etc.

--- a/src/client/agents/agentcard/agentcard.styl
+++ b/src/client/agents/agentcard/agentcard.styl
@@ -11,6 +11,12 @@
   color silver
   z-index 1
 
+.agent-exp-next
+  position absolute
+  color ghostwhite
+  bottom 1px
+  left 1px
+
 .agent-equipment-picture-placeholder
   position relative
   width 30px
