--- a/src/client/dashboard/playerswindow/operations.upgrade.dialog.styl
+++ b/src/client/dashboard/playerswindow/operations.upgrade.dialog.styl
@@ -1,11 +1,23 @@
 #OperationsUpgradeDialog
   position absolute
-  width 440px
-  height 150px
+  width 330px
+  height 250px
   text-align center
   right 10px
   top 100px
   background-color grey
+  font-size 1.3em
+  font-weight bold
   border 5px solid black
   border-radius 1em
   z-index 10
+
+#OperationsUpgradeYes
+  position absolute
+  bottom 10px
+  left 40px
+
+#OperationsUpgradeNo
+  position absolute
+  bottom 10px
+  right 40px
