--- a/src/client/mission/results/window.styl
+++ b/src/client/mission/results/window.styl
@@ -4,18 +4,20 @@
   margin-left -410px
   width 820px
   height 860px
-  border 1px solid black
+  text-align center
   background-color silver
   border 5px solid black
   border-radius 1em
   z-index 1001
 
   ul
+    list-style-type none
     padding-left 20px
     font-weight bold
     font-size 1.2em
 
     li
+      list-style-type none
       padding-left 30px
       font-weight bold
       font-size 1.1em
@@ -26,11 +28,19 @@
     font-size 1.2em
 
     ul
+      list-style-type none
       padding-left 20px
       font-weight bold
       font-size 1.2em
 
       li
+        list-style-type none
         padding-left 30px
         font-weight bold
         font-size 1.1em
+
+.mission-result-fatal
+  list-style-type none
+  padding-left 30px
+  font-weight bold
+  font-size 1.1em
