state polling on change, operative no#4 picture

--- a/src/client/agents/agenttalk/enhancement.talk.styl
+++ b/src/client/agents/agenttalk/enhancement.talk.styl
@@ -11,6 +11,7 @@
 
 #EnhancementTalkDialog
   position absolute
+  font-size 1.1em
 
 #EnhancementTalkDialogButton
   position absolute
@@ -19,6 +20,7 @@
 
 #EnhancementTalkChoice
   position absolute
+  font-size 1.1em
 
 #EnhancementTalkChoiceYes
   position absolute
