--- a/src/client/dashboard/statuseswindow/statuses.window.styl
+++ b/src/client/dashboard/statuseswindow/statuses.window.styl
@@ -20,3 +20,8 @@
   background-color sandybrown
   font-size 1.2em
   text-align center
+
+  button
+    position absolute
+    bottom 10px
+    left 340px
