assets update, resetting sockets

--- a/src/client/equipments/equipment.styl
+++ b/src/client/equipments/equipment.styl
@@ -81,63 +81,63 @@
 
 #HiredGun > .equipment-stock-item
   background url('../../../assets/img/equipments/hired_gun_256.png')
-  background-color salmon
+  background-color mistyrose
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
 
 #HeavyArms > .equipment-stock-item
   background url('../../../assets/img/equipments/heavy_arms_256.png')
-  background-color salmon
+  background-color mistyrose
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
 
 #ProtectiveGear > .equipment-stock-item
   background url('../../../assets/img/equipments/protective_gear_256.png')
-  background-color salmon
+  background-color mistyrose
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
 
 #FakePassports > .equipment-stock-item
   background url('../../../assets/img/equipments/passports_256.png')
-  background-color gold
+  background-color ivory
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
 
 #DrugsControl > .equipment-stock-item
   background url('../../../assets/img/equipments/drugs_control_256.png')
-  background-color gold
+  background-color ivory
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
 
 #DCP > .equipment-stock-item
   background url('../../../assets/img/equipments/damage_control_256.png')
-  background-color gold
+  background-color ivory
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
 
 #HandyKit > .equipment-stock-item
   background url('../../../assets/img/equipments/electronics_kit_256.png')
-  background-color darkcyan
+  background-color paleturquoise
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
 
 #CustomTools > .equipment-stock-item
   background url('../../../assets/img/equipments/custom_tools_196.png')
-  background-color darkcyan
+  background-color paleturquoise
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
 
 #WPAS > .equipment-stock-item
   background url('../../../assets/img/equipments/WPAS_256.png')
-  background-color darkcyan
+  background-color paleturquoise
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
