--- a/src/client/agents/agentcard/agentcard.styl
+++ b/src/client/agents/agentcard/agentcard.styl
@@ -31,63 +31,63 @@
   background-image url('../../../../assets/img/equipments/passports_256.png')
   background-size 100% 100%
   background-repeat no-repeat
-  background-color gold
+  background-color ivory
   box-shadow 0 0 10px black inset
 
 .agent-equipment-picture-placeholder.DrugsControl
   background-image url('../../../../assets/img/equipments/drugs_control_256.png')
   background-size 100% 100%
   background-repeat no-repeat
-  background-color gold
+  background-color ivory
   box-shadow 0 0 10px black inset
 
 .agent-equipment-picture-placeholder.DCP
   background-image url('../../../../assets/img/equipments/damage_control_256.png')
   background-size 100% 100%
   background-repeat no-repeat
-  background-color gold
+  background-color ivory
   box-shadow 0 0 10px black inset
 
 .agent-equipment-picture-placeholder.HandyKit
   background-image url('../../../../assets/img/equipments/electronics_kit_256.png')
   background-size 100% 100%
   background-repeat no-repeat
-  background-color darkcyan
+  background-color paleturquoise
   box-shadow 0 0 10px black inset
 
 .agent-equipment-picture-placeholder.CustomTools
   background-image url('../../../../assets/img/equipments/custom_tools_196.png')
   background-size 100% 100%
   background-repeat no-repeat
-  background-color darkcyan
+  background-color paleturquoise
   box-shadow 0 0 10px black inset
 
 .agent-equipment-picture-placeholder.WPAS
   background-image url('../../../../assets/img/equipments/WPAS_256.png')
   background-size 100% 100%
   background-repeat no-repeat
-  background-color darkcyan
+  background-color paleturquoise
   box-shadow 0 0 10px black inset
 
 .agent-equipment-picture-placeholder.HiredGun
   background-image url('../../../../assets/img/equipments/hired_gun_256.png')
   background-size 100% 100%
   background-repeat no-repeat
-  background-color salmon
+  background-color mistyrose
   box-shadow 0 0 10px black inset
 
 .agent-equipment-picture-placeholder.HeavyArms
   background-image url('../../../../assets/img/equipments/heavy_arms_256.png')
   background-size 100% 100%
   background-repeat no-repeat
-  background-color salmon
+  background-color mistyrose
   box-shadow 0 0 10px black inset
 
 .agent-equipment-picture-placeholder.ProtectiveGear
   background-image url('../../../../assets/img/equipments/protective_gear_256.png')
   background-size 100% 100%
   background-repeat no-repeat
-  background-color salmon
+  background-color mistyrose
   box-shadow 0 0 10px black inset
 
 .agent-equipment-description-placeholder
