make websockets work

--- a/src/client/agents/agentcard/agent.profile.styl
+++ b/src/client/agents/agentcard/agent.profile.styl
@@ -28,3 +28,19 @@
   background-size 100%
   top 0px
   left 0px
+
+.in-prison-label
+  position absolute
+  bottom 0
+  left 0
+  background-color black
+  color ghostwhite
+  z-index 10
+
+.being-saved-label
+  position absolute
+  bottom 0
+  left 0
+  background-color black
+  color gold
+  z-index 10
