--- a/src/client/agents/agentcard/agentcard.styl
+++ b/src/client/agents/agentcard/agentcard.styl
@@ -144,3 +144,17 @@
   top 0
   right 0
   z-index 1
+
+.save-agent-button
+  position absolute
+  color black
+  top 0px
+  left 0px
+  z-index 1
+
+.dismiss-agent-button
+  position absolute
+  top 0
+  right 0
+  color black
+  z-index 1
