fixing pollingstate, picture to contest, minor equipmentstockchanges

--- a/src/client/equipments/equipment.styl
+++ b/src/client/equipments/equipment.styl
@@ -33,6 +33,15 @@
   width 230px
   height 80px
 
+.heavy-equipment-tag
+  position absolute
+  background-color black
+  color white
+  width 35px
+  height 17px
+  font-size 0.9em
+  left 100px
+
 #HiredGun, #HandyKit, #FakePassports
   top 20px
 
