playtesting, small adjustments, proper agentLoyal mission result handling

--- a/src/client/agents/agentcard/agentcard.styl
+++ b/src/client/agents/agentcard/agentcard.styl
@@ -73,21 +73,21 @@
   background-image url('../../../../assets/img/equipments/hired_gun_256.png')
   background-size 100% 100%
   background-repeat no-repeat
-  background-color mistyrose
+  background-color red
   box-shadow 0 0 10px black inset
 
 .agent-equipment-picture-placeholder.HeavyArms
   background-image url('../../../../assets/img/equipments/heavy_arms_256.png')
   background-size 100% 100%
   background-repeat no-repeat
-  background-color mistyrose
+  background-color red
   box-shadow 0 0 10px black inset
 
 .agent-equipment-picture-placeholder.ProtectiveGear
   background-image url('../../../../assets/img/equipments/protective_gear_256.png')
   background-size 100% 100%
   background-repeat no-repeat
-  background-color mistyrose
+  background-color red
   box-shadow 0 0 10px black inset
 
 .agent-equipment-description-placeholder
