--- a/src/client/briefing/briefing.screen.styl
+++ b/src/client/briefing/briefing.screen.styl
@@ -5,6 +5,7 @@
   width 1640px
   height 860px
   border 1px solid darkslategrey
+  background-image url('../../../assets/img/bg/test_background3.jpg')
 
 #BriefingMissionShiftRight
   position absolute
