--- a/src/client/dashboard/agentswindow/agentondisplay.styl
+++ b/src/client/dashboard/agentswindow/agentondisplay.styl
@@ -13,7 +13,7 @@
   width 0
   height 0
   border-top 90px solid transparent
-  border-right 30px solid black
+  border-right 30px solid gold
   border-bottom 90px solid transparent
 
 #AgentShiftRight
@@ -23,5 +23,5 @@
   width 0
   height 0
   border-top 90px solid transparent
-  border-left 30px solid black
+  border-left 30px solid gold
   border-bottom 90px solid transparent
