--- a/src/client/dashboard/optionswindow/options.game.window.styl
+++ b/src/client/dashboard/optionswindow/options.game.window.styl
@@ -5,7 +5,7 @@
   bottom 0px
   right 0px
   border 1px solid white
-  background-image url('../../../../assets/img/bg/smooth_metal.jpg')
+  // background-image url('../../../../assets/img/bg/smooth_metal.jpg')
 
   legend
     font-size 1.4em
