--- a/src/client/dashboard/optionswindow/options.window.styl
+++ b/src/client/dashboard/optionswindow/options.window.styl
@@ -1,9 +1,10 @@
 #OptionsWindow
   position absolute
-  background-image url('../../../../assets/img/bg/smooth_metal.jpg')
+  // background-image url('../../../../assets/img/bg/smooth_metal.jpg')
   width 1340px
   height 695px
   top 165px
+  color grey
 
   .options-form
     position absolute
