--- a/src/client/dashboard/welcome.window.styl
+++ b/src/client/dashboard/welcome.window.styl
@@ -1,6 +1,7 @@
 #WelcomeWindow
   position absolute
-  background-image url('../../../assets/img/bg/smooth_metal.jpg')
+  // background-image url('../../../assets/img/bg/smooth_metal.jpg')
+  background-color grey
   width 820px
   height 860px
   border 10px solid black
