--- a/src/client/agents/agentinarmory.styl
+++ b/src/client/agents/agentinarmory.styl
@@ -1,6 +1,6 @@
 #AgentInArmory
   position absolute
-  opacity 0.5
+  background rgba(0, 0, 0, 0.5)
   list-style none
   padding-top 8px
   padding-left 8px
@@ -8,16 +8,16 @@
   left 462px
   width 425px
   height 265px
-  border 1px solid black outset
+  border 2px solid ghostwhite
   /*background-image url('../../../assets/img/bg/metal_diamonds.jpg')*/
-  background-color silver
+  // background-color silver
 
   .agent-card
     opacity 1
 
 #AgentInArmoryStatus
-  color black
-  opacity 0.5
+  color ghostwhite
+  opacity 0.7
   font-weight bold
   font-size 2.5em
   position absolute
