--- a/src/client/dashboard/contestwindow/contest.window.styl
+++ b/src/client/dashboard/contestwindow/contest.window.styl
@@ -1,14 +1,14 @@
 #ContestWindow
   position absolute
   height 860px
-  width 1340px
+  width 1640px
   border-radius 0.5em
   background-image url('../../../../assets/img/bg/big_screen_day.jpg')
   font-weight bold
 
   table
-    top 10px
-    left 420px
+    top 30px
+    left 570px
     max-height 608px
     position absolute
     width 460px
@@ -27,10 +27,13 @@
 
   td
     height 34px
+    color ghostwhite
+    background-color aliceblue
+    background rgba(0, 0, 0, 0.7)
 
   #RefreshContestButton
     position absolute
     color black
     background-color gold
     bottom 0px
-    right 0px
+    right 540px
