--- a/src/client/dashboard/countrieswindow/countrystats.window.styl
+++ b/src/client/dashboard/countrieswindow/countrystats.window.styl
@@ -5,7 +5,6 @@
   height 290px
   width 339px
   border 1px solid black
-  background-image url('../../../../assets/img/bg/smooth_metal.jpg')
   padding-top 3px
 
   table
@@ -24,3 +23,4 @@
   td
     height 38px
     font-weight bold
+    color gold
