--- a/src/client/dashboard/missionswindow/missions.window.styl
+++ b/src/client/dashboard/missionswindow/missions.window.styl
@@ -3,7 +3,7 @@
   top 440px
   height 420px
   width 1340px
-  background-image url('../../../../assets/img/bg/smooth_metal.jpg')
+  // background-image url('../../../../assets/img/bg/smooth_metal.jpg')
 
 #MissionsWindowMessage
   position absolute
