--- a/src/client/dashboard/playerswindow/players.window.styl
+++ b/src/client/dashboard/playerswindow/players.window.styl
@@ -2,17 +2,17 @@
   position absolute
   height 150px
   width 1340px
-  background-image url('../../../../assets/img/bg/smooth_metal.jpg')
+  // background-image url('../../../../assets/img/bg/smooth_metal.jpg')
   font-weight bold
-  color black
+  color gold
 
 #PlayerAgentCard
   position absolute
-  left 250px
+  left 350px
 
 #PlayerLabel
   position absolute
-  left 0px
+  left 150px
   height 150px
   max-width 200px
 
@@ -52,7 +52,7 @@
 #PlayerAgentActionableButton
   position absolute
   top 50px
-  left 5px
+  left 155px
   color gold
   background-color black
   font-size 1.1em
