--- a/src/client/equipments/equipment.styl
+++ b/src/client/equipments/equipment.styl
@@ -90,21 +90,21 @@
 
 #HiredGun > .equipment-stock-item
   background url('../../../assets/img/equipments/hired_gun_256.png')
-  background-color mistyrose
+  background-color red
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
 
 #HeavyArms > .equipment-stock-item
   background url('../../../assets/img/equipments/heavy_arms_256.png')
-  background-color mistyrose
+  background-color red
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
 
 #ProtectiveGear > .equipment-stock-item
   background url('../../../assets/img/equipments/protective_gear_256.png')
-  background-color mistyrose
+  background-color red
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
