--- a/src/client/mission/results/window.styl
+++ b/src/client/mission/results/window.styl
@@ -39,6 +39,12 @@
         font-weight bold
         font-size 1.1em
 
+  li
+    list-style-type none
+    padding-left 30px
+    font-weight bold
+    font-size 1.1em
+
 .mission-result-fatal
   list-style-type none
   padding-left 30px
