graphical adjustments, mission on mercury network straightening on mission accept, small fixes

--- a/src/client/dashboard/dashboard.screen.styl
+++ b/src/client/dashboard/dashboard.screen.styl
@@ -37,6 +37,9 @@
   width 150px
   height 50px
   text-align center
+  margin 5px
+  font-weight bold
+  font-size 1.2em
 
 #DashboardScreenLabel
   position absolute
@@ -52,9 +55,9 @@
   font-size 1.5em
   z-index 1001
 
-#ToPayments
-  position absolute
-  width 75px
-  height 35px
-  right 10px
-  bottom 100px
+// #ToPayments
+//   position absolute
+//   width 75px
+//   height 35px
+//   right 10px
+//   bottom 100px
