--- a/src/client/dashboard/logwindow/log.window.styl
+++ b/src/client/dashboard/logwindow/log.window.styl
@@ -2,7 +2,7 @@
   position absolute
   width 1100px
   height 840px
-  left 120px
+  left 270px
   top 10px
   padding 10px
   border 1px solid whitesmoke
@@ -10,6 +10,8 @@
   overflox-y auto
   color whitesmoke
   font-weight bold
+  background-color black
+  background rgba(0, 0, 0, 0.8)
 
 .log-record
   display block
