--- a/src/client/agents/agentequipcontent.styl
+++ b/src/client/agents/agentequipcontent.styl
@@ -12,6 +12,10 @@
     font-weight bold
     font-size 1.4em
     color silver
+    background-color black
+    padding 5px
+    border 3px solid silver
+    background rgba(0, 0, 0, 0.5)
 
   #ArmoryLogMessage
     position absolute
