--- a/src/client/briefing/briefing.screen.styl
+++ b/src/client/briefing/briefing.screen.styl
@@ -79,10 +79,16 @@
 
 #BriefingLiquidResources
   position absolute
-  width 150px
-  height 100px
-  top 20px
-  right 100px
+  width 230px
+  height 80px
+  text-align center
+  border 3px solid ghostwhite
+  top 60px
+  right 60px
+  background-color black
+  background rgba(0, 0, 0, 0.8)
 
   span
+    font-weight bold
+    font-size 1.2em
     color ghostwhite
