quantity checks for agents and missions, layout and template corrections

--- a/src/client/dashboard/missionswindow/missions.window.styl
+++ b/src/client/dashboard/missionswindow/missions.window.styl
@@ -3,6 +3,7 @@
   top 440px
   height 420px
   width 1340px
+  left 150px
   // background-image url('../../../../assets/img/bg/smooth_metal.jpg')
 
 #MissionsWindowMessage
@@ -31,33 +32,54 @@
   bottom 5px
   right 10px
   font-weight bold
+  color ghostwhite
+
+#PrisonBreakMissionButton
+  position absolute
+  width 150px
+  height 90px
+  bottom 10px
+  right 10px
+  color black
 
 #RecruitAgentButton
   position absolute
-  top 20px
+  width 90px
+  height 90px
+  top 10px
   right 10px
 
 #RobBankButton
   position absolute
-  top 70px
-  right 10px
+  width 90px
+  height 90px
+  top 10px
+  right 110px
 
 #OldDebtButton
   position absolute
-  top 120px
+  width 90px
+  height 90px
+  top 110px
   right 10px
 
 #PurgeEvidenceButton
   position absolute
-  top 170px
-  right 10px
+  width 90px
+  height 90px
+  top 110px
+  right 110px
 
 #SilenceRatButton
   position absolute
-  top 220px
-  right 10px
+  width 90px
+  height 90px
+  top 210px
+  right 110px
 
 #InnerCircleButton
   position absolute
-  top 270px
+  width 90px
+  height 90px
+  top 210px
   right 10px
