--- a/src/client/dashboard/dashboard.content.styl
+++ b/src/client/dashboard/dashboard.content.styl
@@ -3,5 +3,5 @@
   width 1640px
   height 860px
   background-color black
-  background-image url('../../../assets/img/bg/test_background1.jpg')
+  // background-image url('../../../assets/img/bg/test_background1.jpg')
   border-radius 0.5em
