color design changed, gamepushed missions, mission Noticed! added

--- a/src/client/briefing/activemission/agentassignment.styl
+++ b/src/client/briefing/activemission/agentassignment.styl
@@ -12,7 +12,7 @@
   border 1px solid darkslategrey
 
 .assignment-text-placeholder
-  color black
+  color ghostwhite
   text-align center
   font-weight bold
 
