--- a/src/client/dashboard/agentswindow/agentondisplay.styl
+++ b/src/client/dashboard/agentswindow/agentondisplay.styl
@@ -1,6 +1,6 @@
 #AgentOnDisplay
   position absolute
-  right 55px
+  left 55px
   top 10px
   width 425px
   height 265px
@@ -8,20 +8,20 @@
 
 #AgentShiftLeft
   position absolute
-  right 490px
+  left 20px
   top 50px
   width 0
   height 0
   border-top 90px solid transparent
-  border-right 30px solid gold
+  border-right 30px solid grey
   border-bottom 90px solid transparent
 
 #AgentShiftRight
   position absolute
-  right 10px
+  left 490px
   top 50px
   width 0
   height 0
   border-top 90px solid transparent
-  border-left 30px solid gold
+  border-left 30px solid grey
   border-bottom 90px solid transparent
