--- a/src/client/mission/missioncard/results/missionresultlist.styl
+++ b/src/client/mission/missioncard/results/missionresultlist.styl
@@ -7,14 +7,20 @@
   position absolute
   margin 0
   padding 0
-  background-image url('../../../../../assets/img/bg/scratched_metal.jpg')
+  color grey
+  background-color black
+  // background-image url('../../../../../assets/img/bg/scratched_metal.jpg')
 
-.mission-result.loss
-  box-shadow 0 0 10px black inset
+.mission-result-list.loss
+  background-color black
+  color ghostwhite
+  box-shadow 0 0 10px lightgrey inset
   padding 5px
 
-.mission-result.reward
-  box-shadow 0 0 10px red inset
+.mission-result-list.reward
+  background-color lightgrey
+  color black
+  box-shadow 0 0 10px black inset
   padding 5px
 
 .mission-result-list.task
