--- a/src/client/agents/armory.screen.styl
+++ b/src/client/agents/armory.screen.styl
@@ -5,8 +5,8 @@
   width 1640px
   height 860px
   border 1px black solid
-  background-color grey
-  background-image url('../../../assets/img/bg/test_background1.jpg')
+  background-color black
+  // background-image url('../../../assets/img/bg/test_background1.jpg')
 
 #ArmoryScreenLabel
   position absolute
