--- a/src/client/briefing/briefing.screen.styl
+++ b/src/client/briefing/briefing.screen.styl
@@ -5,7 +5,8 @@
   width 1640px
   height 860px
   border 1px solid darkslategrey
-  background-image url('../../../assets/img/bg/test_background3.jpg')
+  background-color black
+  // background-image url('../../../assets/img/bg/test_background3.jpg')
 
 #BriefingMissionShiftRight
   position absolute
@@ -83,7 +84,7 @@
   height 80px
   text-align center
   border 3px solid ghostwhite
-  top 60px
+  top 70px
   right 60px
   background-color black
   background rgba(0, 0, 0, 0.8)
