--- a/src/client/mission/missioncard/missiontitle.styl
+++ b/src/client/mission/missioncard/missiontitle.styl
@@ -4,9 +4,9 @@
   font-weight bold
   font-size 1.1em
   text-align center
-  width 548px
+  width 550px
   height 50px
-  background-color darkred
+  background-color black
   border 1px solid black
   top 20px
   font-size 2.2em
