unifiying design elements, fixes and deletions, sockets as modules, multiplayer db model stub

--- a/src/client/briefing/briefing.screen.styl
+++ b/src/client/briefing/briefing.screen.styl
@@ -14,19 +14,19 @@
   left 1110px
   width 0
   height 0
-  border-top 30px solid transparent
-  border-left 60px solid darkred
-  border-bottom 30px solid transparent
+  border-top 60px solid transparent
+  border-left 40px solid darkgrey
+  border-bottom 60px solid transparent
 
 #BriefingMissionShiftLeft
   position absolute
   top 265px
-  left 480px
+  left 500px
   width 0
   height 0
-  border-top 30px solid transparent
-  border-right 60px solid darkred
-  border-bottom 30px solid transparent
+  border-top 60px solid transparent
+  border-right 40px solid darkgrey
+  border-bottom 60px solid transparent
 
 /*
 #BriefingLogMessage
