--- a/src/client/navs/dashboardtobriefing.styl
+++ b/src/client/navs/dashboardtobriefing.styl
@@ -4,6 +4,6 @@
   left 10px
   width 120px
   height 50px
-  background-color silver
-  color black
+  background-color black
+  color silver
   font-size 1.25em
