--- a/src/client/navs/missiontobriefing.styl
+++ b/src/client/navs/missiontobriefing.styl
@@ -3,6 +3,6 @@
   top 10px
   width 100px
   height 50px
-  background-color silver
-  color black
+  background-color black
+  color silver
   font-size 1.1em
