--- a/src/client/agents/facility.upgrade.dialog.styl
+++ b/src/client/agents/facility.upgrade.dialog.styl
@@ -6,8 +6,9 @@
   font-size 1.3em
   font-weight bold
   text-align center
-  background-color grey
-  border 5px solid black
+  background-color black
+  color silver
+  border 5px solid silver
   border-radius 1em
   z-index 10
 
@@ -15,8 +16,10 @@
     position absolute
     bottom 10px
     left 30px
+    color black
 
   .close-facility-upgrade-dialog
     position absolute
     bottom 10px
     right 20px
+    color black
