--- a/src/client/dashboard/missionswindow/mercury.network.styl
+++ b/src/client/dashboard/missionswindow/mercury.network.styl
@@ -8,5 +8,7 @@
 .mercury-network-button
   width 110px
   height 110px
+  color silver
+  background-color black
   margin 5px
-  font-size 3.5em
+  font-size 3em
