--- a/src/client/navs/dashboardtocommand.styl
+++ b/src/client/navs/dashboardtocommand.styl
@@ -4,6 +4,6 @@
   right 10px
   width 130px
   height 50px
-  background-color silver
-  color black
+  background-color black
+  color silver
   font-size 1.1em
