country of operation, playtesting, play flow fixes

--- a/src/client/agents/agentcard/agent.profile.styl
+++ b/src/client/agents/agentcard/agent.profile.styl
@@ -32,7 +32,7 @@
 .in-prison-label
   position absolute
   bottom 0
-  left 0
+  right 0
   background-color black
   color ghostwhite
   z-index 10
@@ -43,4 +43,26 @@
   left 0
   background-color black
   color gold
+  z-index 10
+
+.loyal-label
+  position absolute
+  top 0
+  right 0
+  background-color black
+  color silver
+  z-index 10
+
+.kia-label
+  position absolute
+  bottom 0
+  left 0
+  background-color black
+  color silver
+  z-index 10
+
+.agent-honor-button-display
+  position absolute
+  top 0
+  right 0
   z-index 10
