color scheme and layout changes

--- a/src/client/agents/agentcard/agentcard.styl
+++ b/src/client/agents/agentcard/agentcard.styl
@@ -31,21 +31,21 @@
   background-image url('../../../../assets/img/equipments/passports_256.png')
   background-size 100% 100%
   background-repeat no-repeat
-  background-color ivory
+  background-color #e6e600
   box-shadow 0 0 10px black inset
 
 .agent-equipment-picture-placeholder.DrugsControl
   background-image url('../../../../assets/img/equipments/drugs_control_256.png')
   background-size 100% 100%
   background-repeat no-repeat
-  background-color ivory
+  background-color #e6e600
   box-shadow 0 0 10px black inset
 
 .agent-equipment-picture-placeholder.DCP
   background-image url('../../../../assets/img/equipments/damage_control_256.png')
   background-size 100% 100%
   background-repeat no-repeat
-  background-color ivory
+  background-color #e6e600
   box-shadow 0 0 10px black inset
 
 .agent-equipment-picture-placeholder.HandyKit
