--- a/src/client/equipments/equipment.styl
+++ b/src/client/equipments/equipment.styl
@@ -2,30 +2,37 @@
 .equipment-stock
   position absolute
   top 480px
-  width 270px
-  height 320px
   color silver
 
 .equipment-count
   position absolute
   padding-left 5px
-  width 20px
-  height 30px
+  width 22px
+  height 45px
   background-color black
-  left 50px
-  top 50px
+  left 5px
+  top 70px
   color white
   font-weight bold
-  font-size 1.2em
+  font-size 1.7em
 
 .equipment-stock.operations
-  left 140px
+  top 280px
+  left 190px
+  width 170px
+  height 350px
 
 .equipment-stock.electronics
+  top 580px
   left 530px
+  height 170px
+  width 350px
 
 .equipment-stock.stealth
-  left 920px
+  left 1020px
+  top 280px
+  width 170px
+  height 350px
 
 .equipment-item
   position absolute
@@ -42,14 +49,23 @@
   font-size 0.9em
   left 100px
 
-#HiredGun, #HandyKit, #FakePassports
+#HiredGun, #FakePassports
   top 20px
 
-#HeavyArms, #CustomTools, #DrugsControl
-  top 115px
+#HeavyArms, #DrugsControl
+  top 125px
 
-#ProtectiveGear, #WPAS, #DCP
-  top 210px
+#ProtectiveGear, #DCP
+  top 230px
+
+#HandyKit
+  left 20px
+
+#CustomTools
+  left 125px
+
+#WPAS
+  left 230px
 
 .equipment-buy-btn
   display inline-block
@@ -77,9 +93,9 @@
 .equipment-stock-item
   position absolute
   border 1px solid black
-  left 50px
-  width 80px
-  height 80px
+  left 10px
+  width 100px
+  height 100px
   background url('../../../assets/img/equipments/equipment_icon_256.png')
   background-size 100% 100%
   background-repeat no-repeat
@@ -111,21 +127,21 @@
 
 #FakePassports > .equipment-stock-item
   background url('../../../assets/img/equipments/passports_256.png')
-  background-color ivory
+  background-color #e6e600
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
 
 #DrugsControl > .equipment-stock-item
   background url('../../../assets/img/equipments/drugs_control_256.png')
-  background-color ivory
+  background-color #e6e600
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
 
 #DCP > .equipment-stock-item
   background url('../../../assets/img/equipments/damage_control_256.png')
-  background-color ivory
+  background-color #e6e600
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
