--- a/src/client/navs/dashboardtointro.styl
+++ b/src/client/navs/dashboardtointro.styl
@@ -1,7 +1,7 @@
 #DashboardToIntro
   position absolute
-  bottom 10px
-  left 10px
+  bottom 80px
+  right 10px
   width 120px
   height 50px
   background-color gold
