changed color of drop die here

--- a/src/client/mission/tabletoptier/dicebin/dicebin.styl
+++ b/src/client/mission/tabletoptier/dicebin/dicebin.styl
@@ -7,6 +7,8 @@
   border 1px solid darkgreen
   text-align center
   padding 10px
+  color ghostwhite
+  font-size 1.2em
 
 /*.dice-bin*/
 .dice-bin, .dice-bin::before, .dice-bin::after {
