interface and other gameplay minor fixes

--- a/src/client/introduction/intro.screen.styl
+++ b/src/client/introduction/intro.screen.styl
@@ -34,6 +34,10 @@
   color silver
   overflow-x hidden
 
+.intro-screen-item
+  padding-top 20px
+  font-size 1.1em
+
 #IntroHelpActions
   ul
     margin-left 5px
