--- a/src/client/dashboard/playerswindow/players.window.styl
+++ b/src/client/dashboard/playerswindow/players.window.styl
@@ -8,7 +8,8 @@
 
 #PlayerAgentCard
   position absolute
-  left 350px
+  left 205px
+  opacity 0.5
 
 #PlayerLabel
   position absolute
@@ -35,8 +36,8 @@
 
 #PlayerHelpHint
   position absolute
-  bottom 5px
-  left 5px
+  bottom 105px
+  left -165px
   text-align right
 
 /*
@@ -51,8 +52,8 @@
 
 #PlayerAgentActionableButton
   position absolute
-  top 50px
-  left 155px
+  top 65px
+  left 15px
   color gold
   background-color black
   font-size 1.1em
