improving help and introduction

--- a/src/client/introduction/intro.screen.styl
+++ b/src/client/introduction/intro.screen.styl
@@ -38,6 +38,9 @@
   padding-top 20px
   font-size 1.1em
 
+.intro-screen-item-title
+  font-size 2em
+
 #IntroHelpActions
   ul
     margin-left 5px
