--- a/src/client/dashboard/dashboard.screen.styl
+++ b/src/client/dashboard/dashboard.screen.styl
@@ -43,7 +43,9 @@
 
 #DashboardScreenLabel
   position absolute
-  width 200px
+  padding-left 10px
+  padding-right 10px
+  min-width 200px
   height 50px
   left 720px
   top -25px
