agent experience bar, options window adjustments, statuses window design adjustments, country obscurity counter in strategical

--- a/src/client/agents/agentcard/agent.clock.styl
+++ b/src/client/agents/agentcard/agent.clock.styl
@@ -1,6 +1,8 @@
 .agent-eta-clock
   position absolute
+  background-color black
   bottom 1px
   right 1px
   width 40px
   height 20px
+  z-index 101
