--- a/src/client/dashboard/missionswindow/country.of.operation.styl
+++ b/src/client/dashboard/missionswindow/country.of.operation.styl
@@ -47,3 +47,12 @@
         padding-right 5px
         width 150px
         z-index 1000
+
+.country-obscurity-counter
+  position absolute
+  font-weight bold
+  font-size 1.5em
+  color ghostwhite
+  width 200px
+  top 105px
+  left 40px
