--- a/src/client/dashboard/dashboard.screen.styl
+++ b/src/client/dashboard/dashboard.screen.styl
@@ -19,9 +19,21 @@
   font-weight bold
   color gold
   text-align center
-  width 1040px
+  max-width 640px
+  top 320px
+  left 1000px
+  z-index 101
+
+#DashboardAnnounce
+  position absolute
+  background-color grey
+  border 3px solid black
+  border-radius 1em
+  font-size 1.3em
+  max-width 1040px
   top 320px
   left 300px
+  padding 50px
   z-index 101
 
 .hide-show-button
