--- a/src/client/dashboard/optionswindow/options.window.styl
+++ b/src/client/dashboard/optionswindow/options.window.styl
@@ -3,7 +3,7 @@
   // background-image url('../../../../assets/img/bg/smooth_metal.jpg')
   width 1340px
   height 695px
-  top 165px
+  top 15px
   color grey
 
   .options-form
@@ -21,12 +21,14 @@
         font-size 1.4em
 
       label
-        display inline-block
+        display block
         font-weight bold
         font-size 1.2em
+        width 150px
 
   input
-    margin 20px
+    width 20px
+    height 20px
 
   button
     margin 25px
