--- a/src/client/agents/agentcard/agentcard.styl
+++ b/src/client/agents/agentcard/agentcard.styl
@@ -158,3 +158,16 @@
   right 0
   color black
   z-index 1
+
+#ActivateSelf
+  position absolute
+  top 0
+  right 0
+  color black
+  z-index 10
+
+#HideSelf
+  position absolute
+  top 0
+  right 0
+  color black
