--- a/src/client/briefing/briefing.screen.styl
+++ b/src/client/briefing/briefing.screen.styl
@@ -5,8 +5,8 @@
   width 1640px
   height 860px
   border 1px solid darkslategrey
-  background-color black
-  // background-image url('../../../assets/img/bg/test_background3.jpg')
+  // background-color black
+  background-image url('../../../assets/img/bg/test_background4.jpg')
 
 #BriefingMissionShiftRight
   position absolute
