--- a/src/client/mission/mission.screen.styl
+++ b/src/client/mission/mission.screen.styl
@@ -6,7 +6,19 @@
   left 50%
   margin-left -820px
   border 1px solid black
+  // background url('../../../assets/img/missions/thumbnails/AgentInTrouble.jpg') 0px 0px / 1640px 860px no-repeat
+  // background-color black
+  background-size 100% 100%
+  // opacity 0.5
+  box-shadow inset 0 0 500px darkblue
+
+#MissionScreenDarkener
+  position absolute
+  width 1640px
+  height 860px
   background-color black
+  opacity 0.7
+  z-index 1
 
 #MissionScreenLabel
   position absolute
