missionaccept refactoring, dashboard actions chopping, reimplementing mission costs

--- a/src/client/briefing/missionlist.table.styl
+++ b/src/client/briefing/missionlist.table.styl
@@ -2,23 +2,29 @@
   position absolute
   top 80px
   left 20px
-  color gold
+  background rgba(0, 0, 0, 0.7)
 
   table
     text-align center
     width 350px
     border 3px solid white
 
+    thead
+      border 3px solid white
+
     th
       height 39px
       background-color darkred
       color white
+      padding-left 5px
+      padding-right 5px
 
     tr.selected
       background-color darkslategrey
 
     td
-      color gold
+      color ghostwhite
+      font-weight bold
 
       button
         background-color black
