--- a/src/client/agents/scrollbar/agentscrollbarnavbutton.styl
+++ b/src/client/agents/scrollbar/agentscrollbarnavbutton.styl
@@ -1,19 +1,21 @@
 .agent-scroll-bar-nav-button.left
+  margin-right 5px
   width 60px
   height 134px
   position relative
   display inline-block
-  background-image url('../../../../assets/img/buttons/navigation-left-button.png')
-  background-size 60px 134px
-  background-repeat no-repeat
+  border-top 67px solid transparent
+  border-right 40px solid darkslateblue
+  border-bottom 67px solid transparent
   z-index 1001
 
 .agent-scroll-bar-nav-button.right
+  margin-left 5px
   width 60px
   height 134px
   position relative
   display inline-block
-  background-image url('../../../../assets/img/buttons/navigation-right-button.png')
-  background-size 60px 134px
-  background-repeat no-repeat
+  border-top 67px solid transparent
+  border-left 40px solid darkslateblue
+  border-bottom 67px solid transparent
   z-index 1001
