--- a/src/client/briefing/briefing.screen.styl
+++ b/src/client/briefing/briefing.screen.styl
@@ -15,7 +15,7 @@
   width 0
   height 0
   border-top 60px solid transparent
-  border-left 40px solid darkgrey
+  border-left 40px solid darkblue
   border-bottom 60px solid transparent
 
 #BriefingMissionShiftLeft
@@ -25,7 +25,7 @@
   width 0
   height 0
   border-top 60px solid transparent
-  border-right 40px solid darkgrey
+  border-right 40px solid darkblue
   border-bottom 60px solid transparent
 
 /*
