--- a/src/client/briefing/briefing.incountry.styl
+++ b/src/client/briefing/briefing.incountry.styl
@@ -3,9 +3,11 @@
   top 20px
   left 1150px
   font-size 2em
+  font-weight bold
   width 250px
   height 40px
-  color gold
+  color darkslateblue
+  background-color black
 
 #BriefingObscurityDisplay
   color ghostwhite
