statuses window tiercomplete component, actions and store

--- a/src/client/dashboard/statuseswindow/statuses.window.styl
+++ b/src/client/dashboard/statuseswindow/statuses.window.styl
@@ -24,8 +24,14 @@
     position absolute
     bottom 10px
     left 340px
+    z-index 1
 
 #StatusesHistoryButton
   position absolute
   left 0px
   top 0px
+
+#StatusesTierCompleteButton
+  position absolute
+  left 0px
+  top 100px
