--- a/src/client/mission/missioncard/tasks/task.styl
+++ b/src/client/mission/missioncard/tasks/task.styl
@@ -7,10 +7,11 @@
   margin-top 30px
   margin-left 10px
 
-.task.briefing
+/*.task.briefing
   width 170px
   height 30px
   margin 5px
+*/
 
 .task.current
   background-color grey
