agent left in prison obscurity impact action + interface animations and toying with outlook

--- a/src/client/agents/armory.screen.styl
+++ b/src/client/agents/armory.screen.styl
@@ -6,7 +6,8 @@
   height 860px
   border 1px black solid
   background-color black
-  // background-image url('../../../assets/img/bg/test_background1.jpg')
+  background-image url('../../../assets/img/bg/test_background1.jpg')
+  animation animatedBackground 2s
 
 #ArmoryScreenLabel
   position absolute
