--- a/src/client/briefing/briefing.screen.styl
+++ b/src/client/briefing/briefing.screen.styl
@@ -7,6 +7,7 @@
   border 1px solid darkslategrey
   // background-color black
   background-image url('../../../assets/img/bg/briefing_room.jpg')
+  animation animatedBackground 1.5s
 
 #BriefingMissionShiftRight
   position absolute
