--- a/src/client/dashboard/dashboard.content.styl
+++ b/src/client/dashboard/dashboard.content.styl
@@ -2,6 +2,6 @@
   position absolute
   width 1640px
   height 860px
-  background-color black
+  // background-color black
   // background-image url('../../../assets/img/bg/test_background1.jpg')
   border-radius 0.5em
