--- a/src/client/dashboard/missionswindow/dashboard.missions.list.styl
+++ b/src/client/dashboard/missionswindow/dashboard.missions.list.styl
@@ -4,9 +4,18 @@
   top 10px
   text-align center
   border 1px solid black
-  color grey
+  color ghostwhite
   font-size 1.2em
+  font-weight bold
 
-  tr
+  th
+    background-color black
+    opacity 1
+    text-align center
+    min-width 50px
+
+  td
     border 1px solid black
+    background-color black
+    opacity 0.5
     font-weight bold
