--- a/src/client/mission/mission.screen.styl
+++ b/src/client/mission/mission.screen.styl
@@ -1,3 +1,8 @@
+@keyframes animatedBackground {
+  from { opacity: 0 }
+  to { opacity: 1 }
+}
+
 /*Mission Tracking Screen layout*/
 #MissionTrackingScreen
   position absolute
@@ -11,6 +16,7 @@
   background-size 100% 100%
   // opacity 0.5
   box-shadow inset 0 0 500px darkblue
+  animation animatedBackground 1s
 
 #MissionScreenDarkener
   position absolute
