--- a/src/client/dashboard/contestwindow/contest.window.styl
+++ b/src/client/dashboard/contestwindow/contest.window.styl
@@ -1,10 +1,17 @@
+@keyframes lefttorightshiftBackground {
+  from { background-position: 1640px 0px }
+  to { background-position: 0px 0px}
+}
+
 #ContestWindow
   position absolute
   height 860px
   width 1640px
   border-radius 0.5em
   background-image url('../../../../assets/img/bg/big_screen_day.jpg')
+  background-repeat no-repeat
   font-weight bold
+  animation lefttorightshiftBackground 1s ease-out
 
   table
     top 30px
@@ -14,9 +21,11 @@
     width 460px
     height 30px
     text-align center
-    border-radius:10px;
-    -moz-border-radius:10px;
-    -webkit-border-radius:10px;
+    border-radius 10px
+    -moz-border-radius 10px
+    -webkit-border-radius 10px
+    animation animatedBackground 1.5s
+    animation-delay 1.5s
 
   table, th, td
     border 1px solid black
