--- a/src/client/dashboard/dashboard.screen.styl
+++ b/src/client/dashboard/dashboard.screen.styl
@@ -3,6 +3,7 @@
   width 1640px
   height 860px
   left 50%
+  background-image url('../../../assets/img/bg/test_background4.jpg')
   margin-left -820px
 
 #DashboardScreenLogout
