--- a/src/client/dashboard/playerswindow/players.window.styl
+++ b/src/client/dashboard/playerswindow/players.window.styl
@@ -4,36 +4,39 @@
   width 1340px
   // background-image url('../../../../assets/img/bg/smooth_metal.jpg')
   font-weight bold
-  color gold
+  color ghostwhite
 
 #PlayerAgentCard
   position absolute
   left 205px
   opacity 0.5
-
+/*
 #PlayerLabel
   position absolute
   left 150px
   height 150px
   max-width 200px
+*/
 
 #PlayerLiquidResources
   position absolute
   top 80px
   right -100px
-  height 150px
-  width 287px
+  max-height 150px
+  max-width 287px
+  background-color black
+  text-align right
 
   span
     font-size 1.1em
-
+/*
 #PlayerName
   position absolute
   height 50px
   text-align center
   font-size 2em
   min-width 200px
-
+*/
 #PlayerHelpHint
   position absolute
   bottom -655px
