--- a/src/client/dashboard/statuseswindow/statuses.window.styl
+++ b/src/client/dashboard/statuseswindow/statuses.window.styl
@@ -5,8 +5,12 @@
   flex-wrap wrap
   justify-content center
   align-items center
+  width 1640px
   height 860px
-  background-image url('../../../../assets/img/bg/sandstone.jpg')
+  background-color black
+  // background-image url('../../../../assets/img/bg/sandstone.jpg')
+  background-repeat no-repeat
+  animation animatedBackground 1s ease-out
 
 #StatusesTierComplete
   position absolute
